parser/finscript_parser.go
// Code generated from Finscript.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // Finscript

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type FinscriptParser struct {
	*antlr.BaseParser
}

var FinscriptParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func finscriptParserInit() {
	staticData := &FinscriptParserStaticData
	staticData.LiteralNames = []string{
		"", "'to'", "'send'", "'source'", "'destination'", "'remaining'", "'='",
		"'('", "')'", "'['", "']'", "'{'", "'}'", "','",
	}
	staticData.SymbolicNames = []string{
		"", "", "SEND", "SOURCE", "DESTINATION", "REMAINING", "EQ", "LPAREN",
		"RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "COMMA", "ASSET",
		"AMOUNT", "ACCOUNT", "PERCENTAGE_PORTION_LITERAL", "RATIO_PORTION_LITERAL",
		"WS", "LINE_COMMENT",
	}
	staticData.RuleNames = []string{
		"program", "sendStmt", "sourceClause", "destinationClause", "sourceBlock",
		"inorderSrcList", "destBlock", "allotmentDestList", "allotmentClause",
		"portion",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// FinscriptParserInit initializes any static state used to implement FinscriptParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewFinscriptParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func FinscriptParserInit() {
	staticData := &FinscriptParserStaticData
	staticData.once.Do(finscriptParserInit)
}

// NewFinscriptParser produces a new parser instance for the optional input antlr.TokenStream.
func NewFinscriptParser(input antlr.TokenStream) *FinscriptParser {
	FinscriptParserInit()
	this := new(FinscriptParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &FinscriptParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Finscript.g4"

	return this
}

// FinscriptParser tokens.
const (
	FinscriptParserEOF                        = antlr.TokenEOF
	FinscriptParserT__0                       = 1
	FinscriptParserSEND                       = 2
	FinscriptParserSOURCE                     = 3
	FinscriptParserDESTINATION                = 4
	FinscriptParserREMAINING                  = 5
	FinscriptParserEQ                         = 6
	FinscriptParserLPAREN                     = 7
	FinscriptParserRPAREN                     = 8
	FinscriptParserLBRACK                     = 9
	FinscriptParserRBRACK                     = 10
	FinscriptParserLBRACE                     = 11
	FinscriptParserRBRACE                     = 12
	FinscriptParserCOMMA                      = 13
	FinscriptParserASSET                      = 14
	FinscriptParserAMOUNT                     = 15
	FinscriptParserACCOUNT                    = 16
	FinscriptParserPERCENTAGE_PORTION_LITERAL = 17
	FinscriptParserRATIO_PORTION_LITERAL      = 18
	FinscriptParserWS                         = 19
	FinscriptParserLINE_COMMENT               = 20
)

// FinscriptParser rules.
const (
	FinscriptParserRULE_program           = 0
	FinscriptParserRULE_sendStmt          = 1
	FinscriptParserRULE_sourceClause      = 2
	FinscriptParserRULE_destinationClause = 3
	FinscriptParserRULE_sourceBlock       = 4
	FinscriptParserRULE_inorderSrcList    = 5
	FinscriptParserRULE_destBlock         = 6
	FinscriptParserRULE_allotmentDestList = 7
	FinscriptParserRULE_allotmentClause   = 8
	FinscriptParserRULE_portion           = 9
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllSendStmt() []ISendStmtContext
	SendStmt(i int) ISendStmtContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FinscriptParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FinscriptParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FinscriptParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(FinscriptParserEOF, 0)
}

func (s *ProgramContext) AllSendStmt() []ISendStmtContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISendStmtContext); ok {
			len++
		}
	}

	tst := make([]ISendStmtContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISendStmtContext); ok {
			tst[i] = t.(ISendStmtContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) SendStmt(i int) ISendStmtContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISendStmtContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISendStmtContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FinscriptListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FinscriptListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FinscriptVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FinscriptParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, FinscriptParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(21)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == FinscriptParserSEND {
		{
			p.SetState(20)
			p.SendStmt()
		}

		p.SetState(23)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(25)
		p.Match(FinscriptParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISendStmtContext is an interface to support dynamic dispatch.
type ISendStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SEND() antlr.TerminalNode
	LBRACK() antlr.TerminalNode
	ASSET() antlr.TerminalNode
	AMOUNT() antlr.TerminalNode
	RBRACK() antlr.TerminalNode
	LPAREN() antlr.TerminalNode
	SourceClause() ISourceClauseContext
	DestinationClause() IDestinationClauseContext
	RPAREN() antlr.TerminalNode

	// IsSendStmtContext differentiates from other interfaces.
	IsSendStmtContext()
}

type SendStmtContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySendStmtContext() *SendStmtContext {
	var p = new(SendStmtContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FinscriptParserRULE_sendStmt
	return p
}

func InitEmptySendStmtContext(p *SendStmtContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FinscriptParserRULE_sendStmt
}

func (*SendStmtContext) IsSendStmtContext() {}

func NewSendStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SendStmtContext {
	var p = new(SendStmtContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FinscriptParserRULE_sendStmt

	return p
}

func (s *SendStmtContext) GetParser() antlr.Parser { return s.parser }

func (s *SendStmtContext) SEND() antlr.TerminalNode {
	return s.GetToken(FinscriptParserSEND, 0)
}

func (s *SendStmtContext) LBRACK() antlr.TerminalNode {
	return s.GetToken(FinscriptParserLBRACK, 0)
}

func (s *SendStmtContext) ASSET() antlr.TerminalNode {
	return s.GetToken(FinscriptParserASSET, 0)
}

func (s *SendStmtContext) AMOUNT() antlr.TerminalNode {
	return s.GetToken(FinscriptParserAMOUNT, 0)
}

func (s *SendStmtContext) RBRACK() antlr.TerminalNode {
	return s.GetToken(FinscriptParserRBRACK, 0)
}

func (s *SendStmtContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(FinscriptParserLPAREN, 0)
}

func (s *SendStmtContext) SourceClause() ISourceClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISourceClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISourceClauseContext)
}

func (s *SendStmtContext) DestinationClause() IDestinationClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDestinationClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDestinationClauseContext)
}

func (s *SendStmtContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(FinscriptParserRPAREN, 0)
}

func (s *SendStmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SendStmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SendStmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FinscriptListener); ok {
		listenerT.EnterSendStmt(s)
	}
}

func (s *SendStmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FinscriptListener); ok {
		listenerT.ExitSendStmt(s)
	}
}

func (s *SendStmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FinscriptVisitor:
		return t.VisitSendStmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FinscriptParser) SendStmt() (localctx ISendStmtContext) {
	localctx = NewSendStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, FinscriptParserRULE_sendStmt)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(27)
		p.Match(FinscriptParserSEND)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(28)
		p.Match(FinscriptParserLBRACK)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(29)
		p.Match(FinscriptParserASSET)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(30)
		p.Match(FinscriptParserAMOUNT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(31)
		p.Match(FinscriptParserRBRACK)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(32)
		p.Match(FinscriptParserLPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(33)
		p.SourceClause()
	}
	{
		p.SetState(34)
		p.DestinationClause()
	}
	{
		p.SetState(35)
		p.Match(FinscriptParserRPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISourceClauseContext is an interface to support dynamic dispatch.
type ISourceClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SOURCE() antlr.TerminalNode
	EQ() antlr.TerminalNode
	SourceBlock() ISourceBlockContext

	// IsSourceClauseContext differentiates from other interfaces.
	IsSourceClauseContext()
}

type SourceClauseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySourceClauseContext() *SourceClauseContext {
	var p = new(SourceClauseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FinscriptParserRULE_sourceClause
	return p
}

func InitEmptySourceClauseContext(p *SourceClauseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FinscriptParserRULE_sourceClause
}

func (*SourceClauseContext) IsSourceClauseContext() {}

func NewSourceClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SourceClauseContext {
	var p = new(SourceClauseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FinscriptParserRULE_sourceClause

	return p
}

func (s *SourceClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *SourceClauseContext) SOURCE() antlr.TerminalNode {
	return s.GetToken(FinscriptParserSOURCE, 0)
}

func (s *SourceClauseContext) EQ() antlr.TerminalNode {
	return s.GetToken(FinscriptParserEQ, 0)
}

func (s *SourceClauseContext) SourceBlock() ISourceBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISourceBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISourceBlockContext)
}

func (s *SourceClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SourceClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SourceClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FinscriptListener); ok {
		listenerT.EnterSourceClause(s)
	}
}

func (s *SourceClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FinscriptListener); ok {
		listenerT.ExitSourceClause(s)
	}
}

func (s *SourceClauseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FinscriptVisitor:
		return t.VisitSourceClause(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FinscriptParser) SourceClause() (localctx ISourceClauseContext) {
	localctx = NewSourceClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, FinscriptParserRULE_sourceClause)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(37)
		p.Match(FinscriptParserSOURCE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(38)
		p.Match(FinscriptParserEQ)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(39)
		p.SourceBlock()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDestinationClauseContext is an interface to support dynamic dispatch.
type IDestinationClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DESTINATION() antlr.TerminalNode
	EQ() antlr.TerminalNode
	DestBlock() IDestBlockContext

	// IsDestinationClauseContext differentiates from other interfaces.
	IsDestinationClauseContext()
}

type DestinationClauseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDestinationClauseContext() *DestinationClauseContext {
	var p = new(DestinationClauseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FinscriptParserRULE_destinationClause
	return p
}

func InitEmptyDestinationClauseContext(p *DestinationClauseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FinscriptParserRULE_destinationClause
}

func (*DestinationClauseContext) IsDestinationClauseContext() {}

func NewDestinationClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DestinationClauseContext {
	var p = new(DestinationClauseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FinscriptParserRULE_destinationClause

	return p
}

func (s *DestinationClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *DestinationClauseContext) DESTINATION() antlr.TerminalNode {
	return s.GetToken(FinscriptParserDESTINATION, 0)
}

func (s *DestinationClauseContext) EQ() antlr.TerminalNode {
	return s.GetToken(FinscriptParserEQ, 0)
}

func (s *DestinationClauseContext) DestBlock() IDestBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDestBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDestBlockContext)
}

func (s *DestinationClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DestinationClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DestinationClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FinscriptListener); ok {
		listenerT.EnterDestinationClause(s)
	}
}

func (s *DestinationClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FinscriptListener); ok {
		listenerT.ExitDestinationClause(s)
	}
}

func (s *DestinationClauseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FinscriptVisitor:
		return t.VisitDestinationClause(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FinscriptParser) DestinationClause() (localctx IDestinationClauseContext) {
	localctx = NewDestinationClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, FinscriptParserRULE_destinationClause)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(41)
		p.Match(FinscriptParserDESTINATION)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(42)
		p.Match(FinscriptParserEQ)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(43)
		p.DestBlock()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISourceBlockContext is an interface to support dynamic dispatch.
type ISourceBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ACCOUNT() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	InorderSrcList() IInorderSrcListContext

	// IsSourceBlockContext differentiates from other interfaces.
	IsSourceBlockContext()
}

type SourceBlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySourceBlockContext() *SourceBlockContext {
	var p = new(SourceBlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FinscriptParserRULE_sourceBlock
	return p
}

func InitEmptySourceBlockContext(p *SourceBlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FinscriptParserRULE_sourceBlock
}

func (*SourceBlockContext) IsSourceBlockContext() {}

func NewSourceBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SourceBlockContext {
	var p = new(SourceBlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FinscriptParserRULE_sourceBlock

	return p
}

func (s *SourceBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *SourceBlockContext) ACCOUNT() antlr.TerminalNode {
	return s.GetToken(FinscriptParserACCOUNT, 0)
}

func (s *SourceBlockContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(FinscriptParserLBRACE, 0)
}

func (s *SourceBlockContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(FinscriptParserRBRACE, 0)
}

func (s *SourceBlockContext) InorderSrcList() IInorderSrcListContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInorderSrcListContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInorderSrcListContext)
}

func (s *SourceBlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SourceBlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SourceBlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FinscriptListener); ok {
		listenerT.EnterSourceBlock(s)
	}
}

func (s *SourceBlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FinscriptListener); ok {
		listenerT.ExitSourceBlock(s)
	}
}

func (s *SourceBlockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FinscriptVisitor:
		return t.VisitSourceBlock(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FinscriptParser) SourceBlock() (localctx ISourceBlockContext) {
	localctx = NewSourceBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, FinscriptParserRULE_sourceBlock)
	var _la int

	p.SetState(51)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case FinscriptParserACCOUNT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(45)
			p.Match(FinscriptParserACCOUNT)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case FinscriptParserLBRACE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(46)
			p.Match(FinscriptParserLBRACE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(48)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == FinscriptParserLBRACE || _la == FinscriptParserACCOUNT {
			{
				p.SetState(47)
				p.InorderSrcList()
			}

		}
		{
			p.SetState(50)
			p.Match(FinscriptParserRBRACE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IInorderSrcListContext is an interface to support dynamic dispatch.
type IInorderSrcListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllSourceBlock() []ISourceBlockContext
	SourceBlock(i int) ISourceBlockContext
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode

	// IsInorderSrcListContext differentiates from other interfaces.
	IsInorderSrcListContext()
}

type InorderSrcListContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInorderSrcListContext() *InorderSrcListContext {
	var p = new(InorderSrcListContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FinscriptParserRULE_inorderSrcList
	return p
}

func InitEmptyInorderSrcListContext(p *InorderSrcListContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FinscriptParserRULE_inorderSrcList
}

func (*InorderSrcListContext) IsInorderSrcListContext() {}

func NewInorderSrcListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InorderSrcListContext {
	var p = new(InorderSrcListContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FinscriptParserRULE_inorderSrcList

	return p
}

func (s *InorderSrcListContext) GetParser() antlr.Parser { return s.parser }

func (s *InorderSrcListContext) AllSourceBlock() []ISourceBlockContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISourceBlockContext); ok {
			len++
		}
	}

	tst := make([]ISourceBlockContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISourceBlockContext); ok {
			tst[i] = t.(ISourceBlockContext)
			i++
		}
	}

	return tst
}

func (s *InorderSrcListContext) SourceBlock(i int) ISourceBlockContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISourceBlockContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISourceBlockContext)
}

func (s *InorderSrcListContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(FinscriptParserCOMMA)
}

func (s *InorderSrcListContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(FinscriptParserCOMMA, i)
}

func (s *InorderSrcListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InorderSrcListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InorderSrcListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FinscriptListener); ok {
		listenerT.EnterInorderSrcList(s)
	}
}

func (s *InorderSrcListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FinscriptListener); ok {
		listenerT.ExitInorderSrcList(s)
	}
}
